Backend/scripts/k8s/local/backend/infrastructure/monitoring/grafana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: ratel-monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:latest
          ports:
            - containerPort: 3000

          volumeMounts:
            - name: grafana-datasources
              mountPath: /etc/grafana/provisioning/datasources

            - name: grafana-storage
              mountPath: /var/lib/grafana

            - name: grafana-dashboard-provider
              mountPath: /etc/grafana/provisioning/dashboards/dashboards.yaml
              subPath: dashboards-provider.yaml

            - name: grafana-dashboards
              mountPath: /var/lib/grafana/dashboards/ratel

      volumes:
        - name: grafana-datasources
          configMap:
            name: grafana-datasources

        - name: grafana-dashboard-provider
          configMap:
            name: grafana-dashboard-provider

        - name: grafana-dashboards
          configMap:
            name: grafana-dashboards-ratel

        - name: grafana-storage
          persistentVolumeClaim:
            claimName: grafana-storage
