Backend/scripts/k8s/local/backend/infrastructure/monitoring/grafana/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: ratel-monitoring-grafana
  namespace: ratel-monitoring

spec:
  parentRefs:
    - name: ratel-gateway
      namespace: ratel-backend

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /monitoring/grafana

      backendRefs:
        - name: grafana
          port: 3000
